2008-06-02  Wim Taymans  <wim.taymans@collabora.co.uk>

	Patch by: Thijs Vermeir <thijsvermeir at gmail dot com>

	* gst/avi/gstavidemux.c: (gst_avi_demux_index_next),
	(gst_avi_demux_index_prev), (gst_avi_demux_index_entry_for_time),
	(gst_avi_demux_do_seek), (gst_avi_demux_handle_seek),
	(gst_avi_demux_process_next_entry):
	* gst/avi/gstavidemux.h:
	Implement reverse playback. Fixes #535300.
	Small cleanups.

2008-06-02  Sebastian Dröge  <slomo@circular-chaos.org>

	* gst/videomixer/videomixer.c: (gst_videomixer_query_duration),
	(gst_videomixer_query_latency):
	When using gst_element_iterate_pads() one has to unref every pad
	after usage.

2008-05-31  Edward Hervey  <edward.hervey@collabora.co.uk>

	Patch by: Bastien Nocera <hadess at hadess dot net>
	* gst/qtdemux/qtdemux.c: (qtdemux_tag_add_str),
	(qtdemux_parse_udta):
	* gst/qtdemux/qtdemux_fourcc.h:
	Improve meta-data handling, add 'comment', 'description' and
	'copyright' tag handling.
	Fixes #535935

2008-05-31  Julien Moutte  <julien@fluendo.com>

	* gst/qtdemux/qtdemux.c: (gst_qtdemux_find_keyframe),
	(gst_qtdemux_find_segment), (gst_qtdemux_perform_seek),
	(gst_qtdemux_seek_to_previous_keyframe),
	(gst_qtdemux_activate_segment), (gst_qtdemux_loop): Make sure we
	we don't clip the segment's stop using the main segment duration as
	that could crop quite some video frames. Make reverse playback support
	more robust and support edit lists. Support seeking to the last frame,
	and fix reverse looping playback. Add some debugging.
	* win32/common/config.h: Updated.

2008-05-31  Sebastian Dröge  <slomo@circular-chaos.org>

	* gst/equalizer/gstiirequalizer.c:
	(gst_iir_equalizer_transform_ip):
	Don't clip float/double samples, correctly unset passthrough mode
	and use better rounding for integer samples.

2008-05-30  Sebastian Dröge  <slomo@circular-chaos.org>

	* gst/equalizer/gstiirequalizer.c:
	(gst_iir_equalizer_band_set_property), (gst_iir_equalizer_init),