@@ -1,3 +1,10 @@
+2008-06-04  Sebastian Dröge  <slomo@circular-chaos.org>
+
+	* gst/matroska/ebml-write.c: (gst_ebml_write_finalize),
+	(gst_ebml_write_set_cache):
+	Unref the write cache in finalize if it was set and add add "FIXME"
+	to a comment that needs it.
+
 2008-06-02  Wim Taymans  <wim.taymans@collabora.co.uk>
 
 	Patch by: Thijs Vermeir <thijsvermeir at gmail dot com>
